{
    "name": "TouchAction",
    "maps": [
        {
            "name": "Touch",
            "id": "62d07b4b-1501-4065-bda7-e7792c422a02",
            "actions": [
                {
                    "name": "TouchPosition",
                    "type": "Value",
                    "id": "21cd1db6-ea7c-4fad-9ee1-9157b1224037",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TouchHold",
                    "type": "Button",
                    "id": "7a4d0374-ae21-41b8-8c36-2130106a99c0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TouchPress",
                    "type": "Button",
                    "id": "9578b0f6-9f5d-46cf-980f-ddc418f61c33",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "9f35350f-2c65-4429-81cd-0906a4f2463b",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cfb9e167-973d-4989-bd5e-24104ef5bbbd",
                    "path": "<Touchscreen>/Press",
                    "interactions": "Tap",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9bf11d03-dd19-4cda-8368-1909052d1bbe",
                    "path": "<Touchscreen>/Press",
                    "interactions": "SlowTap(duration=0.6)",
                    "processors": "",
                    "groups": "",
                    "action": "TouchHold",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}